# pruebaspublico

./: .gitignore  collection-api-env.postman_environment.json  collection-api.json  config.yaml  docker-compose.yml  readme.md
.evaluator/: entrega1.json  entrega1_environment.json  networks.rb  offers-docker-compose.yml  posts-docker-compose.yml  routes-docker-compose.yml  users-docker-compose.yml
.github/workflows/: ci_pipeline.yml  evaluator.yml
component1/: Pipfile
component1/src/: main.py
component1/tests/: test_main.py
ofertas/: Dockerfile  Pipfile  README.md  docker-compose.yml
ofertas/collections/: Ofertas.postman_collection.json
ofertas/src/: main.py
ofertas/src/modelos/: modelos.py
ofertas/src/utils/: clasebase.py  pruebas.py
ofertas/src/view/: valida.py  vistas.py
ofertas/tests/: conftest.py  test_main.py  test_vistas.py
publications/: Dockerfile  Pipfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
publications/src/: Publicaciones.postman_collection.json  app.py
publications/src/modelos/: modelos.py
publications/src/vistas/: utils.py  vistas.py
publications/test/: conftest.py  test_create_publication.py  test_publication_detail.py  test_publications_list.py
routes/: Dockerfile  Pipfile  README.md  docker-compose.yml
routes/src/: main.py
routes/tests/: conftest.py  test_routes.py
users/: Dockerfile  Pipfile  README.md  docker-compose.yml  pytest.ini
users/collection/: Users-API.postman_collection.json  UsersApiLocal.postman_environment.json
users/src/: main.py
users/tests/: conftest.py
(+9 files in other folders)
