[project]
name = "python_test_pipeline_example"
version = "1.0.0"
description = "Ejemplo de uso de pipeline de github para ejecución de pruebas en python."
readme = "README.md"
requires-python = "3.9"
authors = [
  {name = "Cesar Forero", email = "cforero@resurety.com"}
]
maintainers = [
  {name = "Cesar Forero", email = "cforero@resurety.com"}
]
